added all files

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 
 <style>
 body{
-    background-image: url(Bitcoin.jpeg);
+    background-image: url(Bitcoin1.png);
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
