--- a/frontend/index.html
+++ b/frontend/index.html
@@ -110,7 +110,6 @@
 </head>
 <body class="antialiased">
 
-    <!-- Header -->
     <header id="main-header" class="py-4 px-4 sm:px-6 lg:px-8">
         <div class="container mx-auto flex justify-between items-center">
             <div class="flex items-center">
@@ -125,21 +124,17 @@
         </div>
     </header>
 
-    <!-- Main Content -->
     <main>
-        <!-- Hero Section -->
         <section class="hero-section text-center py-20 lg:py-32 px-4 sm:px-6 lg:px-8">
             <div class="container mx-auto">
                 <h2 class="text-4xl md:text-6xl font-extrabold text-white leading-tight mb-4 animate-on-scroll fade-in-up gradient-text">Predict Bitcoin's Next Move</h2>
                 <p class="text-lg md:text-xl text-gray-400 max-w-3xl mx-auto mb-8 animate-on-scroll fade-in-up" style="transition-delay: 0.2s;">Leverage a linear regression model to analyze historical data and forecast future Bitcoin price points. Upload your CSV and get instant insights.</p>
-                <!-- This link now points to prediction.html -->
                 <a href="prediction.html" id="prediction-link" class="cta-button text-gray-900 font-bold py-3 px-8 rounded-full text-lg inline-block animate-on-scroll fade-in-up" style="transition-delay: 0.4s;">
                     Go to Prediction Page &rarr;
                 </a>
             </div>
         </section>
 
-        <!-- Features Section -->
         <section id="features" class="py-20 px-4 sm:px-6 lg:px-8">
             <div class="container mx-auto">
                 <div class="text-center mb-12 animate-on-scroll fade-in-up">
@@ -147,7 +142,6 @@
                     <p class="text-gray-400 mt-2">Everything you need for smarter crypto analysis.</p>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <!-- Feature 1 -->
                     <div class="feature-card p-8 rounded-xl animate-on-scroll fade-in-up">
                         <div class="flex items-center justify-center h-12 w-12 rounded-full bg-[#f7931a] bg-opacity-20 mb-4">
                              <svg class="w-6 h-6 text-[#f7931a]" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 12l3-3 3 3 4-4M8 21l4-4 4 4M3 4h18M4 4h16v12a2 2 0 01-2 2H6a2 2 0 01-2-2V4z"></path></svg>
@@ -155,7 +149,6 @@
                         <h4 class="text-xl font-semibold text-white mb-2">Linear Regression Model</h4>
                         <p class="text-gray-400">Our model uses a time-tested linear regression algorithm to identify trends in your data and project future price values.</p>
                     </div>
-                    <!-- Feature 2 -->
                     <div class="feature-card p-8 rounded-xl animate-on-scroll fade-in-up" style="transition-delay: 0.2s;">
                         <div class="flex items-center justify-center h-12 w-12 rounded-full bg-[#f7931a] bg-opacity-20 mb-4">
                              <svg class="w-6 h-6 text-[#f7931a]" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12"></path></svg>
@@ -163,10 +156,9 @@
                         <h4 class="text-xl font-semibold text-white mb-2">Easy CSV Upload</h4>
                         <p class="text-gray-400">Simply upload your historical Bitcoin data in a CSV file. Our system handles the rest, no complex setup required.</p>
                     </div>
-                    <!-- Feature 3 -->
                     <div class="feature-card p-8 rounded-xl animate-on-scroll fade-in-up" style="transition-delay: 0.4s;">
                          <div class="flex items-center justify-center h-12 w-12 rounded-full bg-[#f7931a] bg-opacity-20 mb-4">
-                           <svg class="w-6 h-6 text-[#f7931a]" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
+                            <svg class="w-6 h-6 text-[#f7931a]" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
                         </div>
                         <h4 class="text-xl font-semibold text-white mb-2">Instant Price Prediction</h4>
                         <p class="text-gray-400">Get an immediate price prediction in Rupees (₹) after your data is processed, allowing for timely decision-making.</p>
@@ -175,7 +167,6 @@
             </div>
         </section>
 
-        <!-- How It Works Section -->
         <section id="how-it-works" class="py-20 px-4 sm:px-6 lg:px-8 bg-black bg-opacity-20">
             <div class="container mx-auto">
                 <div class="text-center mb-12 animate-on-scroll fade-in-up">
@@ -183,7 +174,6 @@
                     <p class="text-gray-400 mt-2">A simple, three-step process to get your prediction.</p>
                 </div>
                 <div class="flex flex-col md:flex-row justify-center items-center gap-8 md:gap-16">
-                    <!-- Step 1 -->
                     <div class="text-center animate-on-scroll fade-in-left">
                         <div class="flex items-center justify-center w-24 h-24 mx-auto mb-4 rounded-full border-2 border-dashed border-[#f7931a]">
                             <span class="text-3xl font-bold text-[#f7931a]">1</span>
@@ -191,11 +181,9 @@
                         <h4 class="text-lg font-semibold text-white">Prepare Your Data</h4>
                         <p class="text-gray-400 max-w-xs">Format your data into a CSV file with 'DateTime' and 'Price' columns.</p>
                     </div>
-                     <!-- Arrow -->
-                    <div class="hidden md:block text-[#f7931a] opacity-50 animate-on-scroll fade-in-up" style="transition-delay: 0.2s;">
+                     <div class="hidden md:block text-[#f7931a] opacity-50 animate-on-scroll fade-in-up" style="transition-delay: 0.2s;">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
                     </div>
-                    <!-- Step 2 -->
                     <div class="text-center animate-on-scroll fade-in-up" style="transition-delay: 0.4s;">
                         <div class="flex items-center justify-center w-24 h-24 mx-auto mb-4 rounded-full border-2 border-dashed border-[#f7931a]">
                             <span class="text-3xl font-bold text-[#f7931a]">2</span>
@@ -203,11 +191,9 @@
                         <h4 class="text-lg font-semibold text-white">Upload & Enter Day</h4>
                         <p class="text-gray-400 max-w-xs">Upload your file and enter the future day number you want to predict.</p>
                     </div>
-                     <!-- Arrow -->
-                     <div class="hidden md:block text-[#f7931a] opacity-50 animate-on-scroll fade-in-up" style="transition-delay: 0.6s;">
+                      <div class="hidden md:block text-[#f7931a] opacity-50 animate-on-scroll fade-in-up" style="transition-delay: 0.6s;">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
                     </div>
-                    <!-- Step 3 -->
                     <div class="text-center animate-on-scroll fade-in-right" style="transition-delay: 0.8s;">
                         <div class="flex items-center justify-center w-24 h-24 mx-auto mb-4 rounded-full border-2 border-dashed border-[#f7931a]">
                             <span class="text-3xl font-bold text-[#f7931a]">3</span>
@@ -219,7 +205,6 @@
             </div>
         </section>
         
-        <!-- CSV Format Section -->
         <section id="csv-format" class="py-20 px-4 sm:px-6 lg:px-8">
             <div class="container mx-auto">
                 <div class="text-center mb-12 animate-on-scroll fade-in-up">
@@ -248,14 +233,13 @@
         </section>
     </main>
 
-    <!-- Footer -->
     <footer class="bg-gray-900 bg-opacity-50">
         <div class="container mx-auto py-8 px-4 sm:px-6 lg:px-8 text-center text-gray-400">
             <p>&copy; 2024 BTC Predict. All Rights Reserved.</p>
             <p class="mt-2 text-sm">This is a project for demonstration purposes and not financial advice.</p>
              <div class="flex justify-center mt-4 space-x-6">
-                <a href="#" class="text-gray-400"><span class="sr-only">Twitter</span><svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.71v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84"></path></svg></a>
-                <a href="#" class="text-gray-400"><span class="sr-only">GitHub</span><svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.477 2 12c0 4.418 2.865 8.165 6.839 9.49.5.092.682-.217.682-.482 0-.237-.009-.868-.014-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.031-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.378.203 2.398.1 2.651.64.7 1.03 1.595 1.03 2.688 0 3.848-2.338 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.003 10.003 0 0022 12c0-5.523-4.477-10-10-10z" clip-rule="evenodd"></path></svg></a>
+                 <a href="https://github.com/Venky8249" class="text-gray-400"><span class="sr-only">GitHub</span><svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.477 2 12c0 4.418 2.865 8.165 6.839 9.49.5.092.682-.217.682-.482 0-.237-.009-.868-.014-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.031-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.378.203 2.398.1 2.651.64.7 1.03 1.595 1.03 2.688 0 3.848-2.338 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.003 10.003 0 0022 12c0-5.523-4.477-10-10-10z" clip-rule="evenodd"></path></svg></a>
+                <a href="https://www.linkedin.com/in/venkatesh-gummadidala-923419291/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="text-gray-400"><span class="sr-only">LinkedIn</span><svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.225 0z"></path></svg></a>
             </div>
         </div>
     </footer>
